# csv_agent

./: .gitignore  CONTRIBUTORS.md  README.md  execution_log.txt  main.py  pyproject.toml  questions.txt  requirements.txt  system_prompt.txt  test_table_display.py  testing.ipynb
backend/memory/: csv_agent_memory.db  csv_agent_memory.db-shm  csv_agent_memory.db-wal
backend/src/constants/: __init__.py  memory_config.py  prompts.py
backend/src/core/: csv_server.py
backend/src/services/: csv_agent.py
coding-agent-mcp/: README_structured_output.md  enhanced_testing.py  requirements.txt  server.py  structured_agent.py  structured_functions.py  test_structured.py  testing.py
coding-agent-mcp/data/: sample_data.csv
data/csv/1/: read_exp.py
data/plots/1/: profit_margin_by_category.csv
frontend/: README.md  app.py  requirements.txt  run.py
frontend/components/: auth.py  file_upload.py  sidebar.py
frontend/src/: __init__.py  api_client.py  chat_interface.py
memory/: csv_agent_memory.db  csv_agent_memory.db-shm  csv_agent_memory.db-wal
src/constants/: model_properties.py  prompts.py
src/core/: csv_server.py
src/services/: csv_agent.py  graph.py
src/utils/: utils.py
